syntax = "proto3";

package hello;

option go_package = "proto/hello";

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

service Hello {
    rpc SayHello (HelloRequest) returns (HelloResponse);
}








